--- a/周报.md
+++ b/周报.md
@@ -1,8 +1,8 @@
 周报
 
-| 时间      | 内容                            | 工作量                                                | 备注 |
-| --------- | ------------------------------- | ----------------------------------------------------- | ---- |
-| 3.1 - 3.7 | [Flink基础扫盲篇](./Notes/1.md) | 学习基础流式计算概念，配置Flink本地环境与运行基本demo |      |
-|           |                                 |                                                       |      |
-|           |                                 |                                                       |      |
+| 时间      | 内容                                                         | 工作量                                                | 备注 |
+| --------- | ------------------------------------------------------------ | ----------------------------------------------------- | ---- |
+| 3.1 - 3.7 | [Flink基础扫盲篇](https://github.com/Decaku/Flink/blob/main/Notes/1.md) | 学习基础流式计算概念，配置Flink本地环境与运行基本demo |      |
+|           |                                                              |                                                       |      |
+|           |                                                              |                                                       |      |
 
