--- a/Notes/1.md
+++ b/Notes/1.md
@@ -65,15 +65,10 @@ Apache Flink 是一个框架/分布式的数据处理引擎(有状态的计算)/
 
 * 数构建风控系统，风控系统会有许多规则，把这些规则抽象到Flink数据引擎中，外界数据过来时流过Flink，为下游提供告警信息。
 
-
-
 # 构建一个demo
 
-demo是Apache Flink官方提供的一个count计算，搭建完环境后，运行jar包。
+demo是Apache Flink官方提供的一个Count计算，搭建完环境后，运行jar包。 功能是输入单词并做到实时统计。如果要观察到count>1的case，请在5s内输入相同单词。
 
+运行demo程序，在终端启动netcat获得输入流：nc -lk 9000。
 
-
-
-
-
-
+![](https://user-gold-cdn.xitu.io/2019/10/29/16e156563964a0e5?w=1024&h=380&f=png&s=272763)
